--- a/dotnet-sso-wpf-probe/MainWindow.xaml
+++ b/dotnet-sso-wpf-probe/MainWindow.xaml
@@ -3,10 +3,28 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:dotnet_sso_wpf_probe"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="8">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,8" >
+            <Button x:Name="LoginButton" Width="80" Height="28" Margin="0,0,8,0" Click="LoginButton_Click">Login</Button>
+            <Button x:Name="LogoutButton" Width="80" Height="28" Margin="0,0,8,0" Click="LogoutButton_Click">Logout</Button>
+            <TextBlock x:Name="StatusTextBlock" VerticalAlignment="Center" Text="Not logged in" />
+        </StackPanel>
+
+        <TextBox x:Name="LogTextBox"
+                 Grid.Row="1"
+                 IsReadOnly="True"
+                 AcceptsReturn="True"
+                 TextWrapping="Wrap"
+                 VerticalScrollBarVisibility="Auto"
+                 HorizontalScrollBarVisibility="Auto"
+                 FontFamily="Consolas"
+                 FontSize="12" />
     </Grid>
 </Window>
