--- a/dotnet-sso-wpf-probe/MainWindow.xaml
+++ b/dotnet-sso-wpf-probe/MainWindow.xaml
@@ -12,6 +12,8 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,8" >
+            <TextBlock Text="Client ID:" VerticalAlignment="Center" Margin="0,0,8,0"/>
+            <TextBox x:Name="ClientIdTextBox" Width="320" Height="24" Margin="0,0,12,0" Text="YOUR_CLIENT_ID" />
             <Button x:Name="LoginButton" Width="80" Height="28" Margin="0,0,8,0" Click="LoginButton_Click">Login</Button>
             <Button x:Name="LogoutButton" Width="80" Height="28" Margin="0,0,8,0" Click="LogoutButton_Click">Logout</Button>
             <TextBlock x:Name="StatusTextBlock" VerticalAlignment="Center" Text="Not logged in" />
